# worldnet

./: .dockerignore  .gitignore  Dockerfile  README.md  README_cn.md  alembic.ini  docker-compose.yml  pyproject.toml  worldnet.db
.github/workflows/: ci.yml
app/adapters/: __init__.py  base.py  factory.py  official_announcement_adapter.py  rss_news_adapter.py  rsshub_route_adapter.py  worldnewsapi_news_adapter.py
app/api/: deps.py  main.py
app/core/: config.py  constants.py  enums.py
app/db/: init_db.py  session.py
app/digests/: __init__.py  config.py  dispatcher.py  llm.py  runner.py  types.py
app/models/: __init__.py  (+8 more)
docs/: architecture.md  architecture_cn.md  deployment.md  deployment_cn.md
migrations/: env.py
scripts/: deploy.sh  init_db.py  list_events.py  run_pipeline.py  run_scheduler.py  seed_data.py  sync_watchlists.py  watchlist_add.py  worldnet-hermes-bridge.py  worldnet-hermes-bridge.service  worldnet-hermes-send.sh
tests/: conftest.py  test_alembic_migration.py  test_api_auth.py  test_db_session.py  test_dedupe.py  test_digest_llm.py  test_digest_models.py  test_digest_runner.py  test_entity_match.py  test_normalize_event.py  test_notification_config.py  test_notification_dispatcher.py  test_notification_notifiers.py  test_pipeline_runner.py  test_pipeline_task.py  test_priority_rules.py  test_qq_agent_mail_notification.py  test_rsshub_route_adapter.py  test_scheduler.py  test_task_config.py  test_watchlist_add_script.py  test_watchlist_api.py  test_watchlist_config_sync.py  test_watchlist_providers.py  test_worldnewsapi_adapter.py
(+50 files in other folders)
